back to NodePort

--- a/helm/12factorapp/values.yaml
+++ b/helm/12factorapp/values.yaml
@@ -11,8 +11,7 @@ image:
 service:
   # name of the service
   name: helm12factorappservice
-  #type: NodePort
-  type: ClusterIP
+  type: NodePort
   externalPort: 80
   # internal port of the application running in the container.  
   internalPort: 9082
