--- a/helm/12factorapp/values.yaml
+++ b/helm/12factorapp/values.yaml
@@ -8,25 +8,32 @@ image:
   #  tag of the image in the repository e.g. stable or latest
   tag: latest
   pullPolicy: IfNotPresent
+
 service:
   # name of the service
   name: helm12factorappservice
-  type: NodePort
-  externalPort: 80
-  # internal port of the application running in the container.
-  internalPort: 9082
+  # NodePort to define a service reachable from the internet
+    #type: NodePort
+    #externalPort: 80
+    # internal port of the application running in the container.
+    #internalPort: 9082
+  type: ClusterIP
+  # external port reachable from within the cluster (not from the internet)
+  port: 9082
+
 ingress:
   enabled: true
   # Used to create an Ingress record.
-  hosts:
-    - chart-example.local
+  #hosts:
+  #  - chart-example.local
   rules:
     - http:
   paths:
   - path: /12-factor-application/Test
   backend:
+    #define the service which belongs to this ingress
     serviceName: helm12factorappservice
-    servicePort: 5000
+    servicePort: 9082
   annotations:
     kubernetes.io/ingress.class: "istio"
     # kubernetes.io/ingress.class: nginx
