--- a/helm/12factorapp/values.yaml
+++ b/helm/12factorapp/values.yaml
@@ -13,20 +13,20 @@ service:
   # name of the service
   name: helm12factorappservice
   # NodePort to define a service reachable from the internet
-    #type: NodePort
-    #externalPort: 80
+  #type: NodePort
+  #externalPort: 80
     # internal port of the application running in the container.
-    #internalPort: 9082
+  #internalPort: 9082
   type: ClusterIP
   # external port reachable from within the cluster (not from the internet)
-  port: 9082
-  targetPort: 9082
+  externalPort: 9082
+  internatPort: 9082
 
 ingress:
   enabled: true
   # Used to create an Ingress record.
-  #hosts:
-  #  - chart-example.local
+  hosts:
+    - chart-example.local
   rules:
     - http:
   paths:
