--- a/helm/12factorapp/templates/ingress.yaml
+++ b/helm/12factorapp/templates/ingress.yaml
@@ -20,7 +20,7 @@ spec:
     - host: {{ $host }}
       http:
         paths:
-          - path: {{ .Values.ingress.path }} 
+          - path: /12-factor-application/Test
             backend:
               serviceName: {{ $serviceName }}
               servicePort: {{ $servicePort }}
