--- a/helm/12factorapp/values.yaml
+++ b/helm/12factorapp/values.yaml
@@ -13,14 +13,15 @@ service:
   # name of the service
   name: http
   # NodePort to define a service reachable from the internet
-  #type: NodePort
-  #externalPort: 80
-    # internal port of the application running in the container.
-  #internalPort: 9082
-  type: ClusterIP
-  # external port reachable from within the cluster (not from the internet)
-  externalPort: 9082
+  type: NodePort
+  externalPort: 80
+  # internal port of the application running in the container.
   internalPort: 9082
+
+  #type: ClusterIP
+  # external port reachable from within the cluster (not from the internet)
+  #externalPort: 9082
+  #internalPort: 9082
 
 ingress:
   enabled: true
